<resources>
    <string name="app_name">Exercise Menu 18B</string>
    <string name="labelapp">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="ps">Password</string>
    <string name="btn">SIGN-IN</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="menu_hitung">Menu Hitung Bangun Datar</string>
    <string name="persegi">Persegi</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="trapesium">Trapesium</string>
    <string name="keliling_persegi">Keliling Persegi</string>
    <string name="luas_persegi">Luas Persegi</string>
    <string name="keliling_persegi_panjang">Keliling Persegi Panjang</string>
    <string name="luas_persegi_panjang">Luas Persegi Panjang</string>
    <string name="keliling_segitiga">Keliling Segitiga</string>
    <string name="luas_segitiga">Luas Segitiga</string>
    <string name="keliling_lingkaran">Keliling Lingkaran</string>
    <string name="luas_lingkaran">Luas Lingkaran</string>
    <string name="keliling_trapesium">Keliling Persegi</string>
    <string name="luas_trapesium">Luas Trapesium</string>
    <string name="masukkan_sisi">Masukkan sisi : </string>
    <string name="hitung_keliling">HITUNG KELILING</string>
    <string name="hitung_luas">HITUNG LUAS</string>
    <string name="hasil">hasil</string>
    <string name="masukkan_panjang">Masukkan panjang</string>
    <string name="masukkan_lebar">Masukkan lebar</string>
    <string name="masukkan_alas">Masukkan alas</string>
    <string name="masukkan_tinggi">Masukkan tinggi</string>
    <string name="masukkan_sisi_miring">Masukkan sisi miring</string>
    <string name="masukkan_EF">Masukkan panjang EF</string>
    <string name="masukkan_AB">Masukkan panjang AB</string>
    <string name="masukkan_AE">Masukkan panjang AE</string>
    <string name="masukkan_t">Masukkan panjang t</string>
    <string name="masukkan_r">Masukkan jari-jari t</string>
</resources>
