<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuHitung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_menu">

        <TextView
            android:id="@+id/menuHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/menu_hitung"
            android:textAlignment="center"
            android:textColor="@color/judul_menu"
            android:textSize="30dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPersegi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_persegi"
            android:text="@string/persegi"/>

        <Button
            android:id="@+id/btnLingkaran"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_lingkaran"
            android:text="@string/lingkaran" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPersegiPanjang"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/btn_persegi_panjang"
            android:text="@string/persegi_panjang"/>

        <Button
            android:id="@+id/btnSegitiga"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/segitiga"
            android:text="@string/segitiga" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTrapesium"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/jajaran_genjang"
            android:text="@string/trapesium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/out"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/finish"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>