<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LuasPersegi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:src="@drawable/persegi"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/luasPersegi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/luas_persegi"
            android:textAlignment="center"
            android:textColor="@color/judul_menu"
            android:textSize="35dp"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewSisi"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/masukkan_sisi"
                    android:textColor="@color/txt"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/inputSisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/txt"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnHitungLuasPersegi"
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/btn_hitung"
            android:text="@string/hitung_luas"/>

        <TextView
            android:id="@+id/textViewHasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/hasil"
            android:textColor="@color/judul_menu"
            android:textSize="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>